<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mengdd.butterknifesample.ViewListActivity">

    <TextView
        android:id="@+id/label_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_first" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_middle_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_middle" />

    <EditText
        android:id="@+id/middle_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_last" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_enable" />

    <Button
        android:id="@+id/button_disable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_disable" />

    <Button
        android:id="@+id/button_alpha_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_alpha_0" />

    <Button
        android:id="@+id/button_alpha_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_alpha_1" />

</LinearLayout>
