<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mengdd.butterknifesample.SimpleActivity">

    <TextView
        android:id="@+id/simple_activity_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_text_view" />

    <Button
        android:id="@+id/simple_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_button" />

    <CheckBox
        android:id="@+id/simple_activity_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_checkbox" />

</LinearLayout>
